fixed background visibility

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -36,29 +36,35 @@
 
 .layout-content::before {
     content: "";
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 75px;
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../assets/background.png');
-    opacity: 0.3;
-    z-index: -1;
+    background-image: url('../assets/background-section.png');
     background-size: auto;
     background-position: top left;
     background-repeat: repeat;
+    opacity: 0.3;
+    z-index: -1;
+    pointer-events: none;
 }
+
+
+
+
 
 .top-bar-tabs {
     min-height: 41px !important;
     height: 41px;
-    padding-right: 20px;
-    padding-left: 20px;
+
 
     .MuiButtonBase-root {
         justify-content: flex-start;
         min-height: 41px !important;
         height: 41px;
+        padding-right: 20px;
+        padding-left: 20px;
     }
 
     .Mui-selected {
